src/test/dev-workspace/src/main/java/net/labymod/core/laby3d/opengl/error/generated/EXTWindowRectangles_StringErrorContext.java
package net.labymod.core.laby3d.opengl.error.generated;

import java.util.HashMap;
import java.util.Map;

/* JADX INFO: loaded from: LabyMod-4.jar:net/labymod/core/laby3d/opengl/error/generated/EXTWindowRectangles_StringErrorContext.class */
public final class EXTWindowRectangles_StringErrorContext {
    public static Map<String, String> buildMethods() {
        Map<String, String> methods = new HashMap<>();
        methods.put("nglWindowRectanglesEXT(IIJ)V", "net/labymod/core/laby3d/opengl/error/generated/EXTWindowRectanglesErrorContext");
        methods.put("glWindowRectanglesEXT(ILjava/nio/IntBuffer;)V", "net/labymod/core/laby3d/opengl/error/generated/EXTWindowRectanglesErrorContext");
        methods.put("glWindowRectanglesEXT(I[I)V", "net/labymod/core/laby3d/opengl/error/generated/EXTWindowRectanglesErrorContext");
        return methods;
    }
}
